
=head1 CVS

=head2 New Features

=over 4

=item * New builtin 'rename' - this does the same as Larry Wall's PPT program but profits from being integrated into Psh (can use Psh subs and variables for the modification) - warp [2000-05-01]

=item * Psh::OS::backtick() now can call and capture the output of Psh builtins on Unix - warp [2000-05-01]

=head2 Internals

=item * New sub Psh::Util::prompt for interactive prompting - warp [2000-05-01]

=item * Cleanups in Psh::OS::Unix::_setup_redirects and _remove_redirects - warp [2000-05-01]

=back


###############################################################################
###############################################################################
##
## 0.008
##
###############################################################################
###############################################################################

=head1 0.008 [2000-04-30]

=head2 New and Enhanced Built-ins

=over 4

=item B<cd> and B<dirs>

The B<cd> builtin now has a (currently unlimited) history list, accessible
using:

  cd -/+/%number

The new builtin B<dirs> displays the stack.

=item B<complete>

Adds a mightier and B<bash> compatible way to define custom completions.

=item B<firsttime>

A firsttime user setup utility for the F<.pshrc> file. It cannot do a lot
currently but will grow in future.

=item B<function>

Tries to emulate B<bash>'s behaviour.

=item B<history>

=item B<unalias>

Does not remove builtins of the same name anymore.

=back


=head2 New Features

=over 4

=item *

Extended Completion code for Perl (supports C<$#foo>, C<$foo-E<gt>{key>,
C<$foo-E<gt>method>, subroutine without C<&>, B<perl> reserved symbol)

=item *

Executable completion now even after initial C<!> for shell escape

=item *

Some minimal status code testing and error handling for user input.

=item *

Understands environment variable C<$IGNOREEOF>.

=item *

Accepts the B<-i> command line switch and ignores it for B<bash> compatibility.

=item *